# normalization_service

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: api.py  data_models.py  db.py  db_models.py  job_title_match.py  main.py  neo4j_client.py
db/: README  custom_operations.py  env.py  init.sql
db/migrations/: 002_create_job_titles_table.sql  003_add_hnsw_index.sql
db/versions/: 6223d13477e4_create_job_titles_table.py  66f51c6e48cf_add_trigram_index_on_job_titles.py  7569315c4503_add_pg_trgm_extension.py
eval/: eval_dataset.json  evaluate_job_title_normalization.ipynb  evaluate_job_title_normalization.py
eval/reports/: all-MiniLM-L6-v2_threshold70_20250714_103541.json  all-MiniLM-L6-v2_threshold70_20250714_103541_incorrect.csv
finetuning/notebooks/: data_preparation.ipynb  finetunemodel.ipynb
raw_data/: Alternate_Titles.csv
scripts/: ingest_alt_titles.py  ingest_job_titles.py  ingest_neo4j.py  run_migrations.py
